gcc/testsuite/g++.dg/modules/mod++-decl-0_b.C
import thing;

void bink ()
{
  baz ();
  bar (); // { dg-error "" "" { xfail *-*-* } }
}
